Trying to edit the previous commit

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <p>Trying to learn to commit myself. Gotta make some changes for that</p>
+    <p> Some more boilerplate code for practice.</p>
+    <p>Again.. some more code </p>
 </body>
 </html>
