--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p>Trying to learn to commit myself. Gotta make some changes for that</p>
     <p> Some more boilerplate code for practice.</p>
     <p>Again.. some more code </p>
+    <p>Cloned and updated the newer code instead of older one</p>
 </body>
 </html>
