--- a/index.html
+++ b/index.html
@@ -3,16 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rashib's Portfolio</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <p>Trying to learn to commit myself. Gotta make some changes for that</p>
-    <p> Some more boilerplate code for practice.</p>
-<<<<<<< Updated upstream
-    <p>Again.. some more code </p>
-    <p>Cloned and updated the newer code instead of older one</p>
-=======
-    <p>Again.. some more code..... </p>
->>>>>>> Stashed changes
 </body>
 </html>
