--- a/index.html
+++ b/index.html
@@ -7,5 +7,16 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">PROJECTS</a></li>
+                <div class="main-logo"><img src="images/main-logox.svg" alt="Logo" width="192" height="192      " class="logo"></div>
+                <li><a href="#">RESUME</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
