update: change nav colors and be make nav somewhat responsive

--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@
 </head>
 <body>
     <header>
-        <nav>
+        <!-- <nav>
             <ul>
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">PROJECTS</a></li>
-                <div class="main-logo"><img src="images/main-logox.svg" alt="Logo" width="192" height="192      " class="logo"></div>
+                <div><a href="#"><img src="images/main-logox.svg" alt="Logo" width="192" height="192" class="logo"></a></div>
                 <li><a href="#">RESUME</a></li>
                 <li><a href="#">CONTACT</a></li>
+            </ul>
+        </nav> -->
+    <nav class="sidebar">
+            <ul>
+                <li class="about"><a href="#">ABOUT</a></li>
+                <li class="projects"><a href="#">PROJECTS</a></li>
+                <div><a href="#"><img src="images/main-logox.svg" alt="Logo" width="192" height="192" class="main-logo"></a></div>
+                <li class="resume"><a href="#">RESUME</a></li>
+                <li class="contact"><a href="#">CONTACT</a></li>
             </ul>
         </nav>
     </header>
