update: change height units and work on making it responsive

--- a/index.html
+++ b/index.html
@@ -19,13 +19,21 @@
         </nav> -->
     <nav class="sidebar">
             <ul>
-                <li class="about"><a href="#">ABOUT</a></li>
-                <li class="projects"><a href="#">PROJECTS</a></li>
-                <div><a href="#"><img src="images/main-logox.svg" alt="Logo" width="192" height="192" class="main-logo"></a></div>
-                <li class="resume"><a href="#">RESUME</a></li>
-                <li class="contact"><a href="#">CONTACT</a></li>
+
+                    <li class="about"><a href="#">ABOUT</a></li>
+                    <li class="projects"><a href="#">PROJECTS</a></li>
+                    <div  class="main-logo"><a href="#"><img src="images/main-logox.svg" alt="Logo" width="192" height="192"></a></div>
+                    <li class="resume"><a href="#">RESUME</a></li>
+                    <li class="contact"><a href="#">CONTACT</a></li>
+
             </ul>
-        </nav>
+
+            <div class="hamburger">
+                <span class="line1"></span>
+                <span class="line2"></span>
+                <span class="line3"></span>
+            </div>
+        </nav>      
     </header>
 </body>
 </html>
