add: hamburger icon

--- a/index.html
+++ b/index.html
@@ -19,20 +19,26 @@
         </nav> -->
     <nav class="sidebar">
             <ul>
-
+                <div  class="main-logo-hidden"><img src="images/main-logox.svg" alt="Logo" width="192" height="192"></div>
                     <li class="about"><a href="#">ABOUT</a></li>
                     <li class="projects"><a href="#">PROJECTS</a></li>
-                    <div  class="main-logo"><a href="#"><img src="images/main-logox.svg" alt="Logo" width="192" height="192"></a></div>
+                    <div  class="main-logo"><img src="images/main-logox.svg" alt="Logo" width="192" height="192"></div>
                     <li class="resume"><a href="#">RESUME</a></li>
                     <li class="contact"><a href="#">CONTACT</a></li>
 
+                    <div class="small-sidebar">
+                        <li class="about-sidebar"><a href="#">ABOUT</a></li>
+                        <li class="projects-sidebar"><a href="#">PROJECTS</a></li>
+                        <li class="resume-sidebar"><a href="#">RESUME</a></li>
+                        <li class="contact-sidebar"><a href="#">CONTACT</a></li></div>
+                    <div class="hamburger">
+                        <span class="line1"></span>
+                        <span class="line2"></span>
+                        <span class="line3"></span>
+                    </div>
             </ul>
 
-            <div class="hamburger">
-                <span class="line1"></span>
-                <span class="line2"></span>
-                <span class="line3"></span>
-            </div>
+
         </nav>      
     </header>
 </body>
