add: some js to make hamburger icon work, fix resizing issue with nav

--- a/index.html
+++ b/index.html
@@ -8,21 +8,12 @@
 </head>
 <body>
     <header>
-        <!-- <nav>
+   <nav class="sidebar">
             <ul>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">PROJECTS</a></li>
-                <div><a href="#"><img src="images/main-logox.svg" alt="Logo" width="192" height="192" class="logo"></a></div>
-                <li><a href="#">RESUME</a></li>
-                <li><a href="#">CONTACT</a></li>
-            </ul>
-        </nav> -->
-    <nav class="sidebar">
-            <ul>
-                <div  class="main-logo-hidden"><img src="images/main-logox.svg" alt="Logo" width="192" height="192"></div>
+                <div  class="main-logo-hidden"><img src="images/logo.svg" alt="Logo" width="64" height="64"></div>
                     <li class="about"><a href="#">ABOUT</a></li>
                     <li class="projects"><a href="#">PROJECTS</a></li>
-                    <div  class="main-logo"><img src="images/main-logox.svg" alt="Logo" width="192" height="192"></div>
+                    <div  class="main-logo"><img src="images/logo.svg" alt="Logo" width="64" height="64"></div>
                     <li class="resume"><a href="#">RESUME</a></li>
                     <li class="contact"><a href="#">CONTACT</a></li>
 
@@ -31,7 +22,7 @@
                         <li class="projects-sidebar"><a href="#">PROJECTS</a></li>
                         <li class="resume-sidebar"><a href="#">RESUME</a></li>
                         <li class="contact-sidebar"><a href="#">CONTACT</a></li></div>
-                    <div class="hamburger">
+                    <div class="hamburger" onclick="showSideIcons()">
                         <span class="line1"></span>
                         <span class="line2"></span>
                         <span class="line3"></span>
@@ -41,5 +32,6 @@
 
         </nav>      
     </header>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
