add: add a new hero section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
 
         </nav>      
     </header>
+    <main>
+        <div class="hero-section">
+            <div class="greeting">     
+                <div class="first-line"><span class="wave">👋</span>Hi, I'm<span class="wave">👋</span></div>
+                <h1 class="name">Rashib Khanal</h1>
+                <h2 class="title">Web & Software Developer</h2>
+                <h3 class="subtitle">Full Stack Developer</h3>
+            </div>
+        </div>
+        </main>
     <script src="scripts/main.js"></script>
 </body>
 </html>
