--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <h2 class="title">Web & Software Developer</h2>
                 <h3 class="subtitle">Full Stack Developer</h3>
             </div>
+            <div class="downward-arrow"><img src="images/down-arrow.svg" alt="down arrow"></div>
         </div>
         </main>
     <script src="scripts/main.js"></script>
