update: animate the down-arrow

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <nav class="sidebar">
             <ul>
                 <div  class="main-logo-hidden"><img src="images/logo.svg" alt="Logo" width="64" height="64"></div>
-                    <li class="about"><a href="#">ABOUT</a></li>
+                    <li class="about"><a href="#hero-section">ABOUT</a></li>
                     <li class="projects"><a href="#">PROJECTS</a></li>
                     <div  class="main-logo"><img src="images/logo.svg" alt="Logo" width="64" height="64"></div>
                     <li class="resume"><a href="#">RESUME</a></li>
@@ -33,7 +33,7 @@
         </nav>      
     </header>
     <main>
-        <div class="hero-section">
+        <div class="hero-section" id="hero-section">
             <div class="greeting">     
                 <div class="first-line"><span class="wave">👋</span>Hi, I'm<span class="wave">👋</span></div>
                 <h1 class="name">Rashib Khanal</h1>
@@ -42,7 +42,13 @@
             </div>
             <div class="downward-arrow"><img src="images/down-arrow.svg" alt="down arrow"></div>
         </div>
-        </main>
+        <div class="projects" id="projects">
+            <div class="project1"></div>
+            <div class="project2"></div>
+            <div class="project3"></div>
+        </div>
+    
+    </main>
     <script src="scripts/main.js"></script>
 </body>
 </html>
