add: project section with 3 project card for showcasing project

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
             <ul>
                 <div  class="main-logo-hidden"><img src="images/logo.svg" alt="Logo" width="64" height="64"></div>
                     <li class="about"><a href="#hero-section">ABOUT</a></li>
-                    <li class="projects"><a href="#">PROJECTS</a></li>
+                    <li class="projects"><a href="#projects-section">PROJECTS</a></li>
                     <div  class="main-logo"><img src="images/logo.svg" alt="Logo" width="64" height="64"></div>
                     <li class="resume"><a href="#">RESUME</a></li>
                     <li class="contact"><a href="#">CONTACT</a></li>
 
                     <div class="small-sidebar">
-                        <li class="about-sidebar"><a href="#">ABOUT</a></li>
-                        <li class="projects-sidebar"><a href="#">PROJECTS</a></li>
+                        <li class="about-sidebar"><a href="#hero-section">ABOUT</a></li>
+                        <li class="projects-sidebar"><a href="#project-section">PROJECTS</a></li>
                         <li class="resume-sidebar"><a href="#">RESUME</a></li>
                         <li class="contact-sidebar"><a href="#">CONTACT</a></li></div>
                     <div class="hamburger" onclick="showSideIcons()">
@@ -42,10 +42,14 @@
             </div>
             <div class="downward-arrow"><img src="images/down-arrow.svg" alt="down arrow"></div>
         </div>
-        <div class="projects" id="projects">
-            <div class="project1"></div>
-            <div class="project2"></div>
-            <div class="project3"></div>
+        <div class="projects-section" id="projects-section">
+            <h1 class="projects-title">Projects</h1>
+            <div class="list-project">
+            <div class="project1">Project 1</div>
+            <div class="project2">Project 2</div>
+            <div class="project3">Project 3</div>
+        </div>
+
         </div>
     
     </main>
