update: make the project card responsive

--- a/index.html
+++ b/index.html
@@ -45,9 +45,28 @@
         <div class="projects-section" id="projects-section">
             <h1 class="projects-title">Projects</h1>
             <div class="list-project">
-            <div class="project1">Project 1</div>
-            <div class="project2">Project 2</div>
-            <div class="project3">Project 3</div>
+            <div class="project">
+                <div class="project-item-image"><img src="images/147507.png" alt="image"></div>
+                <div class="project-item-info">
+                <h1 class="project-item-name">To-Do List Web App</h1>
+                <p class="project-item-description">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt unde similique beatae? Cumque, repellat quo quae consequatur dolorum asperiores illo soluta laboriosam vero natus tempora magni minima ut vitae molestias explicabo commodi? Odit, quia. Corrupti at sed officia tempora eveniet.
+                </p>
+                <div class="project-item-tech">
+                    <button class="tech">HTML</button>
+                    <button class="tech">CSS</button>
+                    <button class="tech">Javascript</button>
+                    <button class="tech">HTML</button>
+
+                </div>
+                <div class="source">
+                    <div class="live-demo"><a href="#" target="_blank"><img src="images/icons/link.svg" alt="GitHub"><span>Live Demo</span></a></div>
+                    <div class="view-source"><a href="github.com" target="_blank"><img src="images/icons/github.svg" alt="GitHub"><span>View Source</span></a></div>
+                </div>
+            </div>
+        </div>
+        <div class="project">Project 2</div>
+        <div class="project">Project 3</div>
         </div>
 
         </div>
