update: add two more project cards

--- a/index.html
+++ b/index.html
@@ -65,8 +65,46 @@
                 </div>
             </div>
         </div>
-        <div class="project">Project 2</div>
-        <div class="project">Project 3</div>
+        <div class="project">
+            <div class="project-item-image"><img src="images/147507.png" alt="image"></div>
+            <div class="project-item-info">
+            <h1 class="project-item-name">Lorem ipsum dolor sit amet.</h1>
+            <p class="project-item-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit modi est animi omnis veniam ducimus labore, qui ab quidem quisquam quaerat iste obcaecati adipisci, exercitationem soluta quasi inventore laboriosam nemo incidunt fuga ut! Deleniti labore possimus unde debitis.
+            </p>
+            <div class="project-item-tech">
+                <button class="tech">HTML</button>
+                <button class="tech">CSS</button>
+                <button class="tech">Javascript</button>
+                <button class="tech">Django</button>
+
+            </div>
+            <div class="source">
+                <div class="live-demo"><a href="#" target="_blank"><img src="images/icons/link.svg" alt="GitHub"><span>Live Demo</span></a></div>
+                <div class="view-source"><a href="github.com" target="_blank"><img src="images/icons/github.svg" alt="GitHub"><span>View Source</span></a></div>
+            </div>
+        </div>
+    </div>
+    <div class="project">
+        <div class="project-item-image"><img src="images/147507.png" alt="image"></div>
+        <div class="project-item-info">
+        <h1 class="project-item-name">Lorem ipsum dolor sit amet.</h1>
+        <p class="project-item-description">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus consequuntur, odio at nam accusantium impedit veritatis, incidunt culpa possimus cupiditate nesciunt. Nam consequatur praesentium sit. Voluptas nihil rerum veritatis aliquam reiciendis quae aperiam, reprehenderit possimus non, laborum praesentium, maiores alias!
+        </p>
+        <div class="project-item-tech">
+            <button class="tech">Lorem.</button>
+            <button class="tech">Lorem.</button>
+            <button class="tech">Lorem.</button>
+            <button class="tech">Lorem.</button>
+
+        </div>
+        <div class="source">
+            <div class="live-demo"><a href="#" target="_blank"><img src="images/icons/link.svg" alt="GitHub"><span>Live Demo</span></a></div>
+            <div class="view-source"><a href="github.com" target="_blank"><img src="images/icons/github.svg" alt="GitHub"><span>View Source</span></a></div>
+        </div>
+    </div>
+</div>
         </div>
 
         </div>
