--- a/index.html
+++ b/index.html
@@ -115,14 +115,15 @@
         <div class="contact-info">
             <h1 class="contact-me">Contact</h1>
             <p class="wanna-chat">Wanna have a chat?</p>
-            <div class="contact-email">contact@rashib.dev</div>
+            <div class="contact-email">
+                <img src="images/icons/email.svg" alt="" class="email-icon"><span class="actual-email">contact@rashib.dev</span></div>
         </div>
 
         <div class="message-box">
             <label for="contact-name" class="contact-name"><input type="text" id="contact-name" placeholder="Full Name*">
             </label><label for="email" class="email"><input type="email" id="email" placeholder="Email*"></label>
             <label for="subject" class="subject"><input type="text" id="subject" placeholder="Subject"></label>
-            <label for="message" class="message"><input type="text" id="message" placeholder="Message*"></label>
+            <label for="message" class="message"><textarea type="text" id="message" placeholder="Message*"></label>
             <button class="send-message"><span>Send a message</span><img src="images/icons/send.svg" alt=""></button>
         </div>
     </section>
