--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
             <h1 class="contact-me">Contact</h1>
             <p class="wanna-chat">Wanna have a chat?</p>
             <div class="contact-email">
-                <img src="images/icons/email.svg" alt="" class="email-icon"><span class="actual-email">contact@rashib.dev</span></div>
+                <img src="images/icons/email.svg" alt="" class="email-icon"><p class="actual-email">contact@rashib.dev</p></div>
         </div>
 
         <div class="message-box">
             <label for="contact-name" class="contact-name"><input type="text" id="contact-name" placeholder="Full Name*">
             </label><label for="email" class="email"><input type="email" id="email" placeholder="Email*"></label>
             <label for="subject" class="subject"><input type="text" id="subject" placeholder="Subject"></label>
-            <label for="message" class="message"><textarea type="text" id="message" placeholder="Message*"></label>
+            <label for="message" class="message"><textarea type="text" id="message" placeholder="Message*"></textarea></label>
             <button class="send-message"><span>Send a message</span><img src="images/icons/send.svg" alt=""></button>
         </div>
     </section>
