add: footer with social links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      
                          <div class="small-sidebar">
                              <li class="about-sidebar"><a href="#hero-section">ABOUT</a></li>
-                             <li class="projects-sidebar"><a href="#project-section">PROJECTS</a></li>
+                             <li class="projects-sidebar"><a href="#projects-section">PROJECTS</a></li>
                              <li class="resume-sidebar"><a href="#">RESUME</a></li>
                              <li class="contact-sidebar"><a href="#contacts-section">CONTACT</a></li></div>
                          <div class="hamburger" onclick="showSideIcons()">
@@ -128,6 +128,15 @@
         </div>
     </section>
     </main>
+    <footer>
+        <div class="footer-section">
+            <div class="right-reserved">&copy; 2024, Rashib Khanal</div>
+        </div>
+        <div class="social-icons-footer">
+            <a href="https://github.com/RashibK" target="_blank"><img class='footer-icon' src="images/icons/github.svg" alt="Github"></a>
+            <a href="https://www.linkedin.com/in/rashibk/" target="_blank"><img class='footer-icon' src="images/icons/linkedin.svg" alt="Github"></a>
+        </div>    
+    </footer>
     <script src="scripts/main.js"></script>
 </body>
 </html>
