update: make scrolling smooth while clicking on nav icons and fix other minor issues

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
          </header></div>
 
     <main>
-        <div class="hero-section" id="hero-section">
+        <div class="hero-section-wrapper"><div class="hero-section" id="hero-section">
             <div class="greeting">     
                 <div class="first-line"><span class="wave">👋</span>Hi, I'm<span class="wave">👋</span></div>
                 <h1 class="name">Rashib Khanal</h1>
                 <h2 class="title">Web & Software Developer</h2>
                 <h3 class="subtitle">Full Stack Developer</h3>
             </div>
-            <div class="downward-arrow"><img src="images/down-arrow.svg" alt="down arrow"></div>
-        </div>
+            <div class="downward-arrow"><a href="#projects-section"><img src="images/down-arrow.svg" alt="down arrow"></a></div>
+        </div></div>
         <section class="projects-section" id="projects-section">
             <h1 class="projects-title">Projects</h1>
             <div class="list-project">
@@ -116,7 +116,7 @@
             <h1 class="contact-me">Contact</h1>
             <p class="wanna-chat">Wanna have a chat?</p>
             <div class="contact-email">
-                <img src="images/icons/email.svg" alt="" class="email-icon"><p class="actual-email">contact@rashib.dev</p></div>
+            <img src="images/icons/email.svg" alt="" class="email-icon"><a href="mailto:contact@rashib.dev" class="actual-email">contact@rashib.dev</a></div>
         </div>
 
         <div class="message-box">
