update: change the website color and put a animated hamburger icon on click

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="header-wrapper"><header>
         <nav class="sidebar">
                  <ul>
-                     <div  class="main-logo-hidden"><img src="images/logo.svg" alt="Logo" width="64" height="64"></div>
+                     <div  class="main-logo-hidden"><img src="images/icons/logo-default.svg" alt="Logo" width="64" height="64"></div>
                          <li class="about"><a href="#hero-section">ABOUT</a></li>
                          <li class="projects"><a href="#projects-section">PROJECTS</a></li>
-                         <div  class="main-logo"><img src="images/logo.svg" alt="Logo" width="64" height="64"></div>
+                         <div  class="main-logo"><img src="images/icons/logo-default.svg" alt="Logo" width="64" height="64"></div>
                          <li class="resume"><a href="#">RESUME</a></li>
                          <li class="contact"><a href="#contacts-section">CONTACT</a></li>
      
@@ -23,9 +23,9 @@
                              <li class="resume-sidebar"><a href="#">RESUME</a></li>
                              <li class="contact-sidebar"><a href="#contacts-section">CONTACT</a></li></div>
                          <div class="hamburger" onclick="showSideIcons()">
-                             <span class="line1"></span>
-                             <span class="line2"></span>
-                             <span class="line3"></span>
+                             <span class="line1 line"></span>
+                             <span class="line2 line"></span>
+                             <span class="line3 line"></span>
                          </div>
                  </ul>
      
