--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <div class="header-wrapper"><header>
         <nav class="sidebar">
                  <ul>
-                     <div  class="main-logo-hidden"><img src="images/icons/logo-default.svg" alt="Logo" width="64" height="64"></div>
+                     <div  class="main-logo-hidden"><a href="#"><img src="images/icons/logo-default.svg" alt="Logo" width="64" height="64"></div>
                          <li class="about"><a href="#hero-section">ABOUT</a></li>
                          <li class="projects"><a href="#projects-section">PROJECTS</a></li>
-                         <div  class="main-logo"><img src="images/icons/logo-default.svg" alt="Logo" width="64" height="64"></div>
+                         <div  class="main-logo"><a href="#"><img src="images/icons/logo-default.svg" alt="Logo" width="64" height="64"></a></div>
                          <li class="resume"><a href="#">RESUME</a></li>
                          <li class="contact"><a href="#contacts-section">CONTACT</a></li>
      
                          <div class="small-sidebar">
-                             <li class="about-sidebar"><a href="#hero-section">ABOUT</a></li>
-                             <li class="projects-sidebar"><a href="#projects-section">PROJECTS</a></li>
-                             <li class="resume-sidebar"><a href="#">RESUME</a></li>
-                             <li class="contact-sidebar"><a href="#contacts-section">CONTACT</a></li></div>
+                             <li class="about-sidebar"><a onclick="showSideIcons()" href="#hero-section">ABOUT</a></li>
+                             <li class="projects-sidebar"><a onclick="showSideIcons()" href="#projects-section">PROJECTS</a></li>
+                             <li class="resume-sidebar"><a onclick="showSideIcons()"a href="#">RESUME</a></li>
+                             <li class="contact-sidebar"><a onclick="showSideIcons()" href="#contacts-section">CONTACT</a></li></div>
                          <div class="hamburger" onclick="showSideIcons()">
                              <span class="line1 line"></span>
                              <span class="line2 line"></span>
@@ -109,8 +109,6 @@
         </div>
 
     </section>
-
-
     <section class="contacts-section" id="contacts-section">
         <div class="contact-info">
             <h1 class="contact-me">Contact</h1>
@@ -124,7 +122,7 @@
             </label><label for="email" class="email"><input type="email" id="email" placeholder="Email*"></label>
             <label for="subject" class="subject"><input type="text" id="subject" placeholder="Subject"></label>
             <label for="message" class="message"><textarea type="text" id="message" placeholder="Message*"></textarea></label>
-            <button class="send-message"><span>Send a message</span><img src="images/icons/send.svg" alt=""></button>
+            <button class="send-message"><span>Send Message</span><img src="images/icons/send.svg" alt=""></button>
         </div>
     </section>
     </main>
