updated: projects section with actual projects

--- a/index.html
+++ b/index.html
@@ -47,62 +47,59 @@
             <h1 class="projects-title">Projects</h1>
             <div class="list-project">
             <div class="project">
-                <div class="project-item-image"><img src="images/147507.png" alt="image"></div>
+                <div class="project-item-image"><img src="images/bazaarhub.png" alt="image"></div>
                 <div class="project-item-info">
-                <h1 class="project-item-name">To-Do List Web App</h1>
+                <h1 class="project-item-name">Bazaar Hub</h1>
                 <p class="project-item-description">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt unde similique beatae? Cumque, repellat quo quae consequatur dolorum asperiores illo soluta laboriosam vero natus tempora magni minima ut vitae molestias explicabo commodi? Odit, quia. Corrupti at sed officia tempora eveniet.
+                A fully functional E-commerce website featuring secure user registration and sign-in with JWT authentication, shopping cart functionality for logged-in users, and Stripe API integration for secure payment processing.
                 </p>
                 <div class="project-item-tech">
-                    <button class="tech">HTML</button>
-                    <button class="tech">CSS</button>
-                    <button class="tech">Javascript</button>
-                    <button class="tech">HTML</button>
-
+                    <button class="tech">Django</button>
+                    <button class="tech">React</button>
+                    <button class="tech">REST API</button>
+                    <button class="tech">MySQL</button>
                 </div>
                 <div class="source">
-                    <div class="live-demo"><a href="#" target="_blank"><img src="images/icons/link.svg" alt="GitHub"><span>Live Demo</span></a></div>
-                    <div class="view-source"><a href="github.com" target="_blank"><img src="images/icons/github.svg" alt="GitHub"><span>View Source</span></a></div>
+                    <div class="live-demo"><a><img src="images/icons/link.svg" alt="GitHub"><span>Live Demo</span></a></div>
+                    <div class="view-source"><a href="https://github.com/RashibK/bazaar-hub" target="_blank"><img src="images/icons/github.svg" alt="GitHub"><span>View Source</span></a></div>
                 </div>
             </div>
         </div>
         <div class="project">
-            <div class="project-item-image"><img src="images/147507.png" alt="image"></div>
+            <div class="project-item-image"><img src="images/project tracker.png" alt="image"></div>
             <div class="project-item-info">
-            <h1 class="project-item-name">Lorem ipsum dolor sit amet.</h1>
+            <h1 class="project-item-name">Project Tracker</h1>
             <p class="project-item-description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit modi est animi omnis veniam ducimus labore, qui ab quidem quisquam quaerat iste obcaecati adipisci, exercitationem soluta quasi inventore laboriosam nemo incidunt fuga ut! Deleniti labore possimus unde debitis.
+                A command-line time tracking tool designed for managing projects and generating detailed reports. Integrated with a MySQL database, it enables users to create, track, stop, and complete projects efficiently. Features include a visual bar graph powered by Matplotlib to display project data.
             </p>
             <div class="project-item-tech">
-                <button class="tech">HTML</button>
-                <button class="tech">CSS</button>
+                <button class="tech">Python</button>
+                <button class="tech">MySQL</button>
                 <button class="tech">Javascript</button>
                 <button class="tech">Django</button>
 
             </div>
             <div class="source">
-                <div class="live-demo"><a href="#" target="_blank"><img src="images/icons/link.svg" alt="GitHub"><span>Live Demo</span></a></div>
-                <div class="view-source"><a href="github.com" target="_blank"><img src="images/icons/github.svg" alt="GitHub"><span>View Source</span></a></div>
+                <div class="live-demo"><a><img src="images/icons/link.svg" alt="GitHub"><span>Live Demo</span></a></div>
+                <div class="view-source"><a href="https://github.com/RashibK/project-tracker" target="_blank"><img src="images/icons/github.svg" alt="GitHub"><span>View Source</span></a></div>
             </div>
         </div>
     </div>
     <div class="project">
-        <div class="project-item-image"><img src="images/147507.png" alt="image"></div>
+        <div class="project-item-image"><img src="images/todo.png" alt="image"></div>
         <div class="project-item-info">
-        <h1 class="project-item-name">Lorem ipsum dolor sit amet.</h1>
+        <h1 class="project-item-name">Todo-List-App</h1>
         <p class="project-item-description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus consequuntur, odio at nam accusantium impedit veritatis, incidunt culpa possimus cupiditate nesciunt. Nam consequatur praesentium sit. Voluptas nihil rerum veritatis aliquam reiciendis quae aperiam, reprehenderit possimus non, laborum praesentium, maiores alias!
+            A Full Stack application with basic CRUD functionality, allowing users to seamlessly create, update, and delete to-dos.
         </p>
         <div class="project-item-tech">
-            <button class="tech">Lorem.</button>
-            <button class="tech">Lorem.</button>
-            <button class="tech">Lorem.</button>
-            <button class="tech">Lorem.</button>
-
+            <button class="tech">React</button>
+            <button class="tech">Django</button>
+            <button class="tech">REST API</button>
         </div>
         <div class="source">
-            <div class="live-demo"><a href="#" target="_blank"><img src="images/icons/link.svg" alt="GitHub"><span>Live Demo</span></a></div>
-            <div class="view-source"><a href="github.com" target="_blank"><img src="images/icons/github.svg" alt="GitHub"><span>View Source</span></a></div>
+            <div class="live-demo"><a><img src="images/icons/link.svg" alt="GitHub"><span>Live Demo</span></a></div>
+            <div class="view-source"><a href="https://github.com/RashibK/to-do-app" target="_blank"><img src="images/icons/github.svg" alt="GitHub"><span>View Source</span></a></div>
         </div>
     </div>
 </div>
