--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@1,100..900&family=Unica+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Unica+One&display=swap"
       rel="stylesheet"
     />
     <title>Vite + React + TS</title>
